# student-album-generator

./: .gitignore  README.md  pyproject.toml
css/: left-style.css  right-style.css
student_album_generator/: __init__.py  combine_pdf.py  config.py  generate_left_html.py  generate_right_html.py  html_to_pdf.py  input.py  run.py  utils.py
student_album_generator/interop/: conversion.py  html.py  pdf.py
