[tool.poetry]
name = "student-album-generator"
version = "0.1.0"
description = ""
authors = ["Agnes Leung <dev@agnesleung.me>"]
readme = "README.md"
packages = [{include = "student_album_generator"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
dominate = "^2.7.0"
pypdf = "^3.4.0"
selenium = "^4.10.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
